# self_correcting_rag

./: .gitignore  README.md  pyproject.toml
db/embedchain_store.lance/_transactions/: 0-d4978a83-d9b4-4daf-8b53-d39bb6c5ba7c.txn  1-e668b9f8-28ef-4964-b4fb-977105afdea7.txn
db/embedchain_store.lance/_versions/: 1.manifest  2.manifest
db/embedchain_store.lance/data/: 44d7c2fe-7628-4a14-b8a3-ac9c83ff9e9b.lance
knowledge/: 1.txt
src/self_correcting_rag/: crew.py  main.py
src/self_correcting_rag/config/: agents.yaml  tasks.yaml
src/self_correcting_rag/tools/: tools.py
